# imnes-emulator

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
imnes-desktop/: Cargo.toml
imnes-desktop/src/: app.rs  main.rs  rom.rs  ui.rs
imnes-desktop/src/emulator/: screen.rs
nes-emulator-desktop/: Cargo.toml
nes-emulator-desktop/src/: app.rs  display.rs  emulator.rs  gui.rs  logger.rs  main.rs  rom.rs  ui.rs
nes-emulator-desktop/src/emulator/: audio.rs  joypad.rs  screen.rs
nes-emulator-sdl2/: Cargo.toml
nes-emulator-sdl2/src/: main.rs
nesemulib/: Cargo.toml
nesemulib/src/: apu.rs  bus.rs  cartridge.rs  cpu.rs  lib.rs  mapper.rs  ppu.rs
nesemulib/src/apu/: ch_dmc.rs  ch_noise.rs  ch_pulse.rs  ch_triangle.rs  envelope.rs  frame_sequencer.rs  length_counter.rs  lookup.rs  sweep.rs
nesemulib/src/cpu/: opcode.rs
nesemulib/src/mapper/: mapper0.rs  mapper1.rs  mapper2.rs  mapper3.rs  mapper4.rs  mapper66.rs  mapper7.rs  testmapper.rs
nesemulib/src/ppu/: palette.rs  ppubus.rs  registers.rs
roms/: .gitignore
src/: apu.rs  bus.rs  cartridge.rs  cpu.rs  main.rs  mapper.rs  ppu.rs
src/apu/: apu_lookup.py  ch_noise.rs  ch_pulse.rs  envelope.rs  frame_sequencer.rs  length_counter.rs  sweep.rs
src/cpu/: mod.rs  opcode.rs
src/mapper/: mapper0.rs  mapper1.rs  mapper3.rs  mapper7.rs  testmapper.rs
src/ppu/: ppubus.rs  registers.rs  screen.rs
