[package]
name = "nes-emulator"
version = "0.1.0"
authors = ["Gordon Zhou gordonzhou223@gmail.com"]
repository = "https://github.com/gordnzhou/nes-emulator.git"
edition = "2021"
build = "build.rs"

[dependencies]
lazy_static = "1.4.0"
bitflags = "2.5.0"

[dependencies.sdl2]
version = "0.36"
features = ["use_mac_framework", "unsafe_textures"]

[dev-dependencies]
serde_json = "1.0"