[package]
name = "nes-emulator"
version = "0.1.0"
authors = ["Gordon Zhou gordonzhou223@gmail.com"]
repository = "https://github.com/gordnzhou/nes-emulator.git"
edition = "2021"
build = "build.rs"

[dependencies]
lazy_static = "1.4.0"
bitflags = "2.5.0"

[dependencies.sdl2]
version = "0.36"
features = ["bundled"]

[dev-dependencies]
serde_json = "1.0"

[profile.dev]
opt-level = 1