[package]
name = "nes-emulator-desktop"
version = "0.1.0"
edition = "2021"
authors = ["Gordon Zhou gordonzhou223@gmail.com"]
repository = "https://github.com/gordnzhou/nes-emulator.git"
build = "build.rs"

[dependencies]
nesemulib = { path = "../nesemulib" }
sdl2 = { version = "0.36", features = ["bundled"] }
