[package]
name = "nes-emulator-desktop"
version = "0.1.0"
edition = "2021"
authors = ["Gordon Zhou gordonzhou223@gmail.com"]
repository = "https://github.com/gordnzhou/nes-emulator.git"

[dependencies]
nesemulib = { path = "../nesemulib" }
imgui = "0.12.0"
glium = { version = "0.34.0", default-features = false, features = ["glutin_backend"] }
imgui-winit-support = "0.12.0"
imgui-glium-renderer = "0.12.0"
glutin = "0.31.1"
glutin-winit = "0.4.2"
winit = { version = "0.29.3", features = ["rwh_05"] }
raw-window-handle = "0.5.0"
cpal = "0.15.3"
